--- a/index.html
+++ b/index.html
@@ -6,13 +6,86 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="flex-contanier">
+      <img src="./resources/images/img-tea-cozy-logo.png">
+      <nav>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#feature">Feature Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
+      </nav>
     </Header>
 
-    <div>
+    <div id="main-contanier">
+      <div id="mission" class="flex-contanier">
+        <div id="mission-title">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable,
+            Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+
+      <div id="feature">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <div id="selection" class="flex-contanier">
+
+          <div class="tea">
+            <img src="./resources/images/img-berryblitz.jpg">
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <div class="tea">
+            <img src="./resources/images/img-spiced-rum.jpg">
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <div class="tea">
+            <img src="./resources/images/img-donut.jpg">
+            <h4>Seasonal Dounuts</h4>
+          </div>
+          <div class="tea">
+            <img src="./resources/images/img-myrtle-ave.jpg">
+            <h4>Myrtle Tea</h4>
+          </div>
+          <div class="tea">
+            <img src="./resources/images/img-bedford-bizarre.jpg">
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+
+        </div>
+      </div>
+      <div id="location">
+        <h2>Locations</h2>
+        <div id="loc-list" class="flex-contanier">
+
+            <div class="store">
+              <h3>Downtown</h3>
+              <h4>384 West 4th St</h4>
+              <h4>Suite 108</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+            <div class="store">
+              <h3>East Bayside</h3>
+              <h4>3433 Phisherman's Avenue</h4>
+              <h4>(Northwest Corner)</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+            <div class="store">
+              <h3>Oakdale</h3>
+              <h4>515 Crescent Avenue</h4>
+              <h4>Second Floor<h4>
+              <h4>Portland, Maine</h4>
+            </div>
+
+        </div>
+      </div>
     </div>
 
     <footer>
+      <div id="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <h5 id="copyright">copyright The Tea Cozy 2017</h5>
     </footer>
   </body>
 </html>
